# Jax-Conversion-Qwen2.5-Coder-1.5B-Instruct

./: README.md  local_inference.ipynb  local_inference1.ipynb  main.py  model_flax.py  model_torch.py  print-model.py  printed_model.txt  pyproject.toml  torch_to_flax.py
