[project]
name = "jax-conversion-qwen2-5-coder-1-5b-instruct"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "activations>=0.1.0",
    "flax>=0.10.5",
    "jax>=0.5.3",
    "numpy>=2.2.4",
    "rich>=14.0.0",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "transformers>=4.50.3",
    "typing>=3.10.0.0",
]
